--- a/examples/event-pipeline-demo/event_pipeline_demo/notebooks/Geographic_Distribution_of_Recent_Events.ipynb
+++ b/examples/event-pipeline-demo/event_pipeline_demo/notebooks/Geographic_Distribution_of_Recent_Events.ipynb
@@ -296,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dm.yield_result(pdf_path)"
+    "dm.yield_result(pdf_path, 'pdf_path')"
    ]
   }
  ],
